# yashoes/product/views.py
@@ -1,10 +1,13 @@
 from yashoes.model.product import Product, ListProduct
-from yashoes.product.serializers import ListProductSerializer, ProductDetailSerializer
+from yashoes.model.comment import Comment
+from yashoes.product.serializers import ListProductSerializer, ProductDetailSerializer, GetCommentsSerializer, PostCommentSerializer
 from rest_framework.response import Response
 from rest_framework.views import APIView
 from django.core.paginator import Paginator, EmptyPage, PageNotAnInteger
 from django.shortcuts import get_object_or_404
 from rest_framework import generics
+from rest_framework import status
+from rest_framework.permissions import AllowAny
 
 RESULT_LIMIT = 5
 
@@ -34,8 +37,8 @@ class ProductsAPIView(APIView):
         response = []
         for product in products:
             image_link = ""
-            for version in product.versions.all():
-                image_link = version.image_link
+            for variant in product.variant_set.all():
+                image_link = variant.image_link
                 break
             tmp = ListProduct(product.id, product.name, product.description,
                               product.rate, image_link)
@@ -58,3 +61,32 @@ class ProductDetail(generics.RetrieveAPIView):
         product = get_object_or_404(Product, pk=pk)
         serializer = ProductDetailSerializer(instance=product)
         return Response(serializer.data)
+
+
+class CommentView(APIView):
+    permission_classes = (AllowAny, )
+
+    def get(self, request, product_id):
+        comment = Comment.objects.filter(product=product_id).filter(
+            parent_comment=None)
+        data = GetCommentsSerializer(comment, many=True).data
+        return Response({"data": data})
+
+    def post(self, request, product_id):
+        if request.user.is_authenticated:
+            content = request.data.get("content")
+            parent_comment = request.data.get("parent_comment_id")
+            data = {
+                'product': product_id,
+                'content': content,
+                'parent_comment': parent_comment
+            }
+            serializer = PostCommentSerializer(
+                data=data, context={"user": request.user})
+            if serializer.is_valid():
+                serializer.save()
+                return Response(status=status.HTTP_200_OK)
+            return Response(
+                serializer.errors, status=status.HTTP_400_BAD_REQUEST)
+        else:
+            return Response({'error': "Login first"}, status=status.HTTP_401_UNAUTHORIZED)
